# Stoicheia_v2

./: CMakeLists.txt  main.cpp
src/constructions/: CircleCircleIntersection.cpp  CircleCircleIntersection.h  IntersectionPoint.cpp  IntersectionPoint.h  IntersectionSet.cpp  IntersectionSet.h  LineCircleIntersection.cpp  LineCircleIntersection.h  LineLineIntersection.cpp  LineLineIntersection.h  Midpoint.cpp  Midpoint.h  Parallel.cpp  Parallel.h  Perpendicular.cpp  Perpendicular.h  PerpendicularFoot.cpp  PerpendicularFoot.h  constructions.h
src/geometry/: Circle.cpp  Circle.h  GeoObject.cpp  GeoObject.h  Line.cpp  Line.h  LinearObject.cpp  LinearObject.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Segment.cpp  Segment.h  Triangle.cpp  Triangle.h  UpdateGuard.cpp  UpdateGuard.h  geometry.h  geometryHelper.cpp  geometryHelper.h
src/ui/: DrawingBoard.cpp  DrawingBoard.h  MainWindow.cpp  MainWindow.h
tests/: circletests.cpp  constructiontests.cpp  extendedtests.cpp  geometrytests.cpp  lineartest.cpp  linetest.cpp
